--- a/src/App.scss
+++ b/src/App.scss
@@ -714,8 +714,8 @@
       padding-bottom: 5px;
       padding-top: 5px;
       border-radius: 5px;
-      border: 2px solid #cfd3d8;
-      text-align: center;
+      // border: 2px solid #cfd3d8;
+      // text-align: center;
     }
 
     h4{
