--- a/src/App.scss
+++ b/src/App.scss
@@ -269,6 +269,38 @@
   font-weight: 400;
 }
 
+.onepost{
+  padding: 10px;
+  margin-bottom: 15px;
+  filter: drop-shadow(0px 0px 5px rgba(160, 160, 160, 0.7));
+  background-color: white;
+  position: relative;
+  border-radius: 15px;
+
+  .link::after{
+    position: absolute;
+    top: 45px; right: 0; bottom: 0; left: 0;
+    z-index: 1;
+    pointer-events: auto;
+    content: '';
+    background-color: transparent;
+  }
+
+  a:hover{
+    color: black;
+    background:linear-gradient(transparent 70%, #45cafb 0%);
+    text-decoration: none;
+  }
+
+  .link{
+    color: black,
+  }
+
+  p{
+    font-size: 12px;
+  }
+}
+
 
 
 
@@ -971,34 +1003,6 @@
   border-radius: 30px;
   padding: 7px 20px;
   margin-left: 10px;
-}
-
-.onepost{
-  padding: 10px;
-  margin-bottom: 15px;
-  filter: drop-shadow(0px 0px 5px rgba(160, 160, 160, 0.7));
-  background-color: white;
-  position: relative;
-  border-radius: 15px;
-
-  .link::after{
-    position: absolute;
-    top: 45px; right: 0; bottom: 0; left: 0;
-    z-index: 1;
-    pointer-events: auto;
-    content: '';
-    background-color: transparent;
-  }
-
-  a:hover{
-    color: black;
-    background:linear-gradient(transparent 70%, #45cafb 0%);
-    text-decoration: none;
-  }
-
-  p{
-    font-size: 12px;
-  }
 }
 
 .buttons_detail{
