--- a/src/App.scss
+++ b/src/App.scss
@@ -55,10 +55,12 @@
   .onepost{
     border-radius: 0px;
     margin-bottom: 5px;
+    padding-bottom: 1px;
     filter: none;
 
     h4{
-      font-size: 18px;
+      font-size: 16px;
+      font-weight: 600;
     }
     p{
       font-size: 5px;
