--- a/src/App.scss
+++ b/src/App.scss
@@ -59,18 +59,18 @@
     filter: none;
 
     h4{
-      font-size: 16px;
+      // font-size: 16px;
       font-weight: 600;
     }
     p{
-      font-size: 5px;
+      // font-size: 5px;
     }
     .date{
-      font-size: 5px;
+      // font-size: 5px;
       color: #457AFB
     }
     label, input{
-      font-size: 15px;
+      // font-size: 15px;
     }
   }
 }
