--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@
 
 .onepost{
   padding: 10px;
+  padding-left: 15px;
   margin-bottom: 15px;
   filter: drop-shadow(0px 0px 5px rgba(160, 160, 160, 0.7));
   background-color: white;
@@ -60,6 +61,7 @@
   .onepost{
     border-radius: 0px;
     margin-bottom: 5px;
+    padding-left: 10px;
     padding-bottom: 1px;
     filter: none;
 
